--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,12 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+    max-height: 100vh;
+
+}
+
+.hide {
+    display: none;
 }
 
 .catalog {
@@ -35,6 +41,7 @@ body {
         flex-direction: column;
         justify-content: space-between;
         max-width: 100%;
+        min-height: 350px;
     }
 }
 
@@ -58,6 +65,12 @@ body {
 
     &__title {
         margin: 5px 0;
+        max-height: 55px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
     }
 
     &__price {
@@ -72,17 +85,18 @@ body {
 }
 
 .button-show-more {
-    background: #ffbf26;
+    background: #a2dff9;
     color: #222d4a;
     height: 42px;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    border-radius: 52px;
+    border-radius: 5px;
     padding: 0 32px;
     transition: .3s ease;
     cursor: pointer;
-    margin-left: auto;
+    margin: 10px 0 0 auto;
+
 
     .but-img {
         margin-right: 10px;
