changed json, render cards

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,9 +5,7 @@ body {
 
 }
 
-.hide {
-    display: none;
-}
+
 
 .catalog {
 
@@ -52,6 +50,7 @@ body {
         font-size: 14px;
         color: rgb(161, 159, 159);
         font-weight: 300;
+        min-height: 16px;
     }
 
     &__img {
@@ -69,7 +68,7 @@ body {
         overflow: hidden;
         text-overflow: ellipsis;
         display: -webkit-box;
-        -webkit-line-clamp: 3;
+        -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
     }
 
@@ -85,18 +84,13 @@ body {
 }
 
 .button-show-more {
-    background: #a2dff9;
-    color: #222d4a;
     height: 42px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
     border-radius: 5px;
     padding: 0 32px;
-    transition: .3s ease;
     cursor: pointer;
     margin: 10px 0 0 auto;
-
 
     .but-img {
         margin-right: 10px;
