--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,6 @@ body {
   max-height: 100vh;
 }
 
-.hide {
-  display: none;
-}
-
 .catalog__container {
   max-width: 90%;
   margin: auto;
@@ -56,6 +52,7 @@ body {
   font-size: 14px;
   color: #a19f9f;
   font-weight: 300;
+  min-height: 16px;
 }
 
 .card__img {
@@ -76,7 +73,7 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
 
@@ -93,8 +90,6 @@ body {
 }
 
 .button-show-more {
-  background: #a2dff9;
-  color: #222d4a;
   height: 42px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -102,12 +97,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
   border-radius: 5px;
   padding: 0 32px;
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
   cursor: pointer;
   margin: 10px 0 0 auto;
 }
