--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,16 +1,19 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
-    max-height: 100vh;
-
+    height: 100vh;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+}
 
 
 .catalog {
 
     &__container {
-        max-width: 90%;
+        max-width: 1140px;
         margin: auto;
     }
 
@@ -20,6 +23,10 @@ body {
         grid-template-columns: 25% auto;
         background-color: aliceblue;
         padding: 4px;
+
+        @media (max-width:534px) {
+            grid-template-columns: repeat(1, 1fr);
+        }
     }
 
     // &__filter {}
@@ -29,6 +36,14 @@ body {
         display: grid;
         grid-gap: 4px;
         grid-template-columns: repeat(4, 1fr);
+
+        @media (max-width:880px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @media (max-width:425px) {
+            grid-template-columns: repeat(1, 1fr);
+        }
     }
 
     &__card {
@@ -91,8 +106,70 @@ body {
     padding: 0 32px;
     cursor: pointer;
     margin: 10px 0 0 auto;
+    margin-bottom: 40px;
 
     .but-img {
         margin-right: 10px;
+    }
+}
+
+.cart {
+
+    &__body {
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: aliceblue;
+    }
+
+    &__row {
+        border-radius: 10px;
+        background-color: #fff;
+        flex: 1;
+        padding: 5px 25px;
+        display: flex;
+        width: 900px;
+        margin: 5px auto;
+        justify-content: space-around;
+        align-items: center;
+
+    }
+
+    &__del-btn {
+        margin-right: 10px;
+    }
+
+    &__img {
+        padding: 0 10px;
+
+        img {
+            max-height: 80px;
+        }
+    }
+
+    &__title {
+        flex: 1;
+        margin: 0 10px;
+        max-width: 640px;
+    }
+
+    &__min-btn {}
+
+    &__amount {
+        min-width: 40px;
+        text-align: center;
+    }
+
+    &__plus-btn {}
+
+    &__price {
+        margin: 0 10px;
+    }
+
+    &__total {
+        padding: 10px;
+        width: 900px;
+        text-align: right;
     }
 }
