--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ img {
       -ms-flex: 1;
           flex: 1;
   margin: 0 10px;
-  max-width: 640px;
+  max-width: 550px;
 }
 
 .cart__amount {
@@ -195,6 +195,7 @@ img {
 
 .cart__price {
   margin: 0 10px;
+  min-width: 72px;
 }
 
 .cart__total {
