--- a/scss/style.scss
+++ b/scss/style.scss
@@ -151,7 +151,7 @@ img {
     &__title {
         flex: 1;
         margin: 0 10px;
-        max-width: 640px;
+        max-width: 550px;
     }
 
     &__min-btn {}
@@ -165,6 +165,7 @@ img {
 
     &__price {
         margin: 0 10px;
+        min-width: 72px
     }
 
     &__total {
