fixed bug with goods amount and added empty cart img

--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,21 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   height: 100vh;
+  padding-top: 30px;
 }
 
 img {
   display: block;
   max-width: 100%;
+}
+
+.cart-button {
+  display: block;
+  margin-left: auto;
+  width: 86px;
+  height: 26px;
+  background: url(https://www.moyo.ua/new-moyo/build/img/icon-cart.svg) no-repeat 50%;
+  background-size: contain;
 }
 
 .catalog__container {
@@ -228,7 +238,6 @@ img {
 
 .cart__total {
   padding: 10px;
-  margin-left: auto;
   font-size: 18px;
   font-weight: bold;
 }
